[package]
name = "ws_connector"
version = "0.1.0"
authors = ["Aidan Dempster <aidan.dempster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11.0"
url = "*"
log = "*"
env_logger = "*"
serde_json = "1.0"
native-tls = "*"
serde = { version = "1.0", features = ["derive"] }